--- a/app/globals.css
+++ b/app/globals.css
@@ -891,7 +891,7 @@ input[type='range']::-webkit-slider-thumb {
   appearance: none;
   -webkit-appearance: none;
   background-color: #000;
-  background-image: url(data:image/svg+xml,%3Csvg\ width=\'12\'\ height=\'8\'\ xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath\ d=\'M8\ .5v7L12\ 4zM0\ 4l4\ 3.5v-7z\'\ fill=\'%23FFF\'\ fill-rule=\'nonzero\'/%3E%3C/svg%3E);
+  background-image: url(data:image/svg+xml,%3Csvg\ width=\'12\'\ height=\'8\'\ xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath\ d=\'M8\ .5v7L12\ 4zM0\ 4l4\ 3.5v-7z\'\ fill=\'%23FFF\'\ fillRule=\'nonzero\'/%3E%3C/svg%3E);
   background-position: center;
   background-repeat: no-repeat;
   border: 0;
@@ -902,7 +902,7 @@ input[type='range']::-webkit-slider-thumb {
 }
 input[type='range']::-moz-range-thumb {
   background-color: #000;
-  background-image: url(data:image/svg+xml,%3Csvg\ width=\'12\'\ height=\'8\'\ xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath\ d=\'M8\ .5v7L12\ 4zM0\ 4l4\ 3.5v-7z\'\ fill=\'%23FFF\'\ fill-rule=\'nonzero\'/%3E%3C/svg%3E);
+  background-image: url(data:image/svg+xml,%3Csvg\ width=\'12\'\ height=\'8\'\ xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath\ d=\'M8\ .5v7L12\ 4zM0\ 4l4\ 3.5v-7z\'\ fill=\'%23FFF\'\ fillRule=\'nonzero\'/%3E%3C/svg%3E);
   background-position: center;
   background-repeat: no-repeat;
   border: 0;
@@ -914,7 +914,7 @@ input[type='range']::-moz-range-thumb {
 }
 input[type='range']::-ms-thumb {
   background-color: #000;
-  background-image: url(data:image/svg+xml,%3Csvg\ width=\'12\'\ height=\'8\'\ xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath\ d=\'M8\ .5v7L12\ 4zM0\ 4l4\ 3.5v-7z\'\ fill=\'%23FFF\'\ fill-rule=\'nonzero\'/%3E%3C/svg%3E);
+  background-image: url(data:image/svg+xml,%3Csvg\ width=\'12\'\ height=\'8\'\ xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath\ d=\'M8\ .5v7L12\ 4zM0\ 4l4\ 3.5v-7z\'\ fill=\'%23FFF\'\ fillRule=\'nonzero\'/%3E%3C/svg%3E);
   background-position: center;
   background-repeat: no-repeat;
   border: 0;
