--- a/app/custom.css
+++ b/app/custom.css
@@ -1,169 +1,123 @@
 .d-none {
-   display: none; 
+  display: none;
 }
 
 .bg-blue {
-   background: linear-gradient(90deg,#4c73ff 2.34%,#389bff 100.78%);
+  background: linear-gradient(90deg, #4c73ff 2.34%, #389bff 100.78%);
 }
 
 .me2-div {
-   width: 86px;
-   height: 80px;
-   margin-bottom: 1rem;
-   border: 2px solid #191b39;
-   border-radius: 99999px;
-   background: linear-gradient(to right, #4ca5ff, #b573f8);
- }
- 
- .me2-img {
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
- }
- 
- .tab-head.active {
-    transition: background-color 0.25s ease-in;
- }
- 
- .tab-body article {
-    display: none;
- }
- 
- .tab-body #all {
-    display: block;
- }
- 
- .preview-content {
-    line-height: 2rem;
-    margin-block: 2rem;
- }
- 
- form {
-    overflow: hidden;
- }
- 
- form .upload-area {
-    border-radius: 1rem;
-    width: 100%;
-    min-height: 70vh;
-    background-color: #151e30;
-    padding-top: 2rem;
-    padding-inline: 1.5rem;
- }
- 
- form .upload-area[placeholder]::placeholder, form .upload-author[placeholder]::placeholder, form .upload-description[placeholder]::placeholder {
-    font-style: italic;
- }
- 
- form .upload-author {
-    background-color: #151e30;
-    border-radius: 0.5rem;
-    margin-top: 1rem;
- }
- 
- form .upload-description {
-    background-color: #151e30;
-    border-radius: 0.5rem;
-    margin-top: 1rem;
-    width: 100%;
-    min-height: 20vh;
- }
- 
- form button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    background: #000 !important;
-    padding: 1rem;
-    width: 100%;
-    border-radius: 0.5rem;
-    margin-block: 1rem;
- }
- 
- pre {
-    border-radius: 0.5rem;
-    overflow: hidden;
-    margin-block: 1rem;
- }
- 
- 
- .container {
-    display: flex;
-    width: 100%;
- }
- .image-container {
-    flex: 0 0 auto;
-    display: flex;
-    align-items: center;
- }
- .image-container img {
-    height: 100%;
-    max-height: 100%;
-    object-fit: contain;
- }
- .text-container {
-    flex: 1;
-    /* padding-left: 10px; */
- }
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- /* background: linear-gradient(to right, #4ca5ff, #b573f8);
+  width: 86px;
+  height: 80px;
+  margin-bottom: 1rem;
+  border: 2px solid #191b39;
+  border-radius: 99999px;
+  background: linear-gradient(to right, #4ca5ff, #b573f8);
+}
+
+.me2-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.tab-head.active {
+  transition: background-color 0.25s ease-in;
+}
+
+.tab-body article {
+  display: none;
+}
+
+.tab-body #all {
+  display: block;
+}
+
+.preview-content {
+  line-height: 2rem;
+  margin-block: 2rem;
+}
+
+form {
+  overflow: hidden;
+}
+
+form .upload-area {
+  border-radius: 1rem;
+  width: 100%;
+  min-height: 70vh;
+  background-color: #151e30;
+  padding-top: 2rem;
+  padding-inline: 1.5rem;
+}
+
+form .upload-area[placeholder]::placeholder,
+form .upload-author[placeholder]::placeholder,
+form .upload-description[placeholder]::placeholder {
+  font-style: italic;
+}
+
+form .upload-author {
+  background-color: #151e30;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+}
+
+form .upload-description {
+  background-color: #151e30;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+  width: 100%;
+  min-height: 20vh;
+}
+
+form button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background: #000 !important;
+  padding: 1rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  margin-block: 1rem;
+}
+
+pre {
+  border-radius: 0.5rem;
+  overflow: hidden;
+  margin-block: 1rem;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+}
+.image-container {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+}
+.image-container img {
+  height: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.text-container {
+  flex: 1;
+  /* padding-left: 10px; */
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding-top: 1.25rem;
+  padding-bottom: 1.25rem; */
+  margin-block: 2rem;
+}
+
+/* background: linear-gradient(to right, #4ca5ff, #b573f8);
  background: linear-gradient(to right, #ff7170, #ffe57f);
  background: linear-gradient(to right, #ff4cc2, #f87393);
  background: linear-gradient(to right, #ff4cc2, #f87393);
