--- a/app/custom.css
+++ b/app/custom.css
@@ -160,16 +160,24 @@ pre {
 }
 
 .LoadingModalWrapper {
-   position: fixed; /* Position relative to the wrapper */
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.8); /* Example background */
-   z-index: 1; /* Ensure it's above the content */
-   display: flex;
-   justify-content: center;
-   align-items: center;
+  position: fixed; /* Position relative to the wrapper */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Example background */
+  z-index: 1; /* Ensure it's above the content */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.trimDescription {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* background: linear-gradient(to right, #4ca5ff, #b573f8);
